[gd_scene load_steps=5 format=3 uid="uid://dt8yek5dlrdl7"]

[ext_resource type="Script" path="res://Scenes/game.gd" id="1_771gj"]
[ext_resource type="Script" path="res://Scenes/camera.gd" id="2_3q2bq"]
[ext_resource type="PackedScene" uid="uid://oigaet4tkyjp" path="res://Scenes/map_block.tscn" id="2_d8xa2"]
[ext_resource type="Script" path="res://Scenes/BuildButton.gd" id="3_fhnyi"]

[node name="Game" type="Node2D"]
script = ExtResource("1_771gj")

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(576, 328)
script = ExtResource("2_3q2bq")

[node name="CanvasLayer" type="CanvasLayer" parent="Camera"]

[node name="InGameUI" type="Control" parent="Camera/CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BuildMenu" type="Control" parent="Camera/CanvasLayer/InGameUI"]
anchors_preset = 0
offset_left = 41.0
offset_top = 550.0
offset_right = 81.0
offset_bottom = 590.0

[node name="BuildButton" type="Button" parent="Camera/CanvasLayer/InGameUI/BuildMenu"]
layout_mode = 0
offset_right = 120.0
offset_bottom = 70.0
text = "Build"
script = ExtResource("3_fhnyi")

[node name="BuildOptionsMenu" type="Control" parent="Camera/CanvasLayer/InGameUI/BuildMenu/BuildButton"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SelectOptionLabel" type="RichTextLabel" parent="Camera/CanvasLayer/InGameUI/BuildMenu/BuildButton/BuildOptionsMenu"]
layout_mode = 0
offset_top = -45.0
offset_right = 200.0
offset_bottom = -5.0
text = "Select Option"

[node name="HQButton" type="Button" parent="Camera/CanvasLayer/InGameUI/BuildMenu/BuildButton/BuildOptionsMenu"]
layout_mode = 0
offset_left = 133.0
offset_right = 233.0
offset_bottom = 50.0
text = "HQ"

[node name="TurretButton" type="Button" parent="Camera/CanvasLayer/InGameUI/BuildMenu/BuildButton/BuildOptionsMenu"]
visible = false
layout_mode = 0
offset_left = 133.0
offset_right = 233.0
offset_bottom = 50.0
text = "Turret"

[node name="MapBlock" parent="." instance=ExtResource("2_d8xa2")]

[connection signal="mouse_entered" from="Camera/CanvasLayer/InGameUI/BuildMenu/BuildButton" to="." method="_on_mouse_entered_ui"]
[connection signal="mouse_exited" from="Camera/CanvasLayer/InGameUI/BuildMenu/BuildButton" to="." method="_on_mouse_exited_ui"]
[connection signal="mouse_entered" from="Camera/CanvasLayer/InGameUI/BuildMenu/BuildButton/BuildOptionsMenu/HQButton" to="." method="_on_mouse_entered_ui"]
[connection signal="mouse_exited" from="Camera/CanvasLayer/InGameUI/BuildMenu/BuildButton/BuildOptionsMenu/HQButton" to="." method="_on_mouse_exited_ui"]
[connection signal="pressed" from="Camera/CanvasLayer/InGameUI/BuildMenu/BuildButton/BuildOptionsMenu/HQButton" to="." method="_on_build_turret_option_pressed" binds= [1]]
[connection signal="mouse_entered" from="Camera/CanvasLayer/InGameUI/BuildMenu/BuildButton/BuildOptionsMenu/TurretButton" to="." method="_on_mouse_entered_ui"]
[connection signal="mouse_exited" from="Camera/CanvasLayer/InGameUI/BuildMenu/BuildButton/BuildOptionsMenu/TurretButton" to="." method="_on_mouse_exited_ui"]
[connection signal="pressed" from="Camera/CanvasLayer/InGameUI/BuildMenu/BuildButton/BuildOptionsMenu/TurretButton" to="." method="_on_build_turret_option_pressed" binds= [0]]
